--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.77.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
